<resources>
    <string name="app_name">progettolam</string>
    <string name="cmeter_stop">Stop</string>
    <string name="cmeter_start">Start</string>
    <string name="cmeter_reset">Reset</string>
    <string name="cmeter_pause">Pause</string>
    <string name="cmeter_continue">Continue</string>
    <string name="activity_hint">Choose your activity</string>
    <string-array name="activitys">
        <item>Walking</item>
        <item>Driving</item>
        <item>Sitting</item>
        <item>Unknown</item>
    </string-array>
    <string name="records">Records</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="statistic">statistic</string>
    <string name="qua_sono_gli_step">Qua sono gli step</string>
    <string name="channel_name">periodic_not</string>
    <string name="channel_description">keep walking</string>
    <string name="cMeterStartValue">00:00:00</string>
    <string name="non_adesso">Non adesso.</string>
    <string name="registra_ora">Registra Ora!</string>
    <string name="non_vedo_che_stai_registrando_l_attivita">Non vedo che stai registrando l\'attivita</string>
    <string name="vuoi_registrarla">Vuoi registrarla?</string>
    <string name="spazio" />
</resources>