<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

<!-- qua metti le cose che possono comparire in fragment-->
    <RelativeLayout
        android:id="@+id/clockView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="72sp"
            android:text="@string/cMeterStartValue"
            />
        <TextView
            android:id="@+id/tv_activiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/activity_hint"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_activityList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp">

        <Spinner
            android:id="@+id/list_activity"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:entries="@array/activitys"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/spinner_shape"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">
        <Button
            android:id="@+id/startBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cmeter_start"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cmeter_stop"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepNum"
            android:textSize="40sp"
            />
    </LinearLayout>

</LinearLayout>